add files with class style error and Noerror

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,16 @@ form {
   border-radius: 5px;
   padding: 12px;
 }
+
+.inputError {
+
+  border: 1px solid red;
+
+}
+
+.inputNoError{
+
+  border: 1px solid black
+  
+}
+
